--- a/Proposal/1introduction.tex
+++ b/Proposal/1introduction.tex
@@ -3,13 +3,13 @@
  
 During the last two decades, computers have evolved into intricate personal tracking devices such as smart phones, smart watches, and fitness trackers. At the same time, computers and communication technologies are being embedded in appliances such as TVs, refrigerators, light fixtures and thermostats to create `smart home' environments. Finally, public sensing devices track us as we move about the built environment. By using all kinds of sensors, such as cameras, microphones, GPS, accelerometers, even the simplest of appliances are able to gain knowledge of its surrounding and their users. These connected devices exchange data with each other, and further interact with our day-to-day activities. It is no longer surprising that our smart refrigerator knows what food is stored inside it and notify us that we need to buy groceries when we start our cars as we go back home from work. These smart connected devices are arguably revolutionizing our everyday life.
 
-As forecast by Gartner~\cite{van_der_meulen_gartner_nodate}, the total number of 21 billion IoT devices will be in use by 2020. Cisco also predicts the global IoT market will be \$14.4 trillion by 2022. This rapidly accelerating growth of these Internet of Things (IoT) technologies brings a wealth of opportunities as well as risks. 
+As estimated by Gartner~\cite{eddy2015gartner}, over 21 billion Internet-of-Things (IoT) devices will be in use by 2020. With the rapidly accelerating growth, these IoT technologies is bringing huge potential for social impact. It also comes with a number of key privacy and security risks~\cite{yu2015handling}. 
 
-When users are considering adopting new IoT devices, they want to take the benefit of using those smart connected electronic devices by sharing and disclosing certain personal information to get a more personalized experience. However, such disclosed information could be accessed by other smart devices owned by themselves, other people, organizations, government, or some third-parties with good or bad purpose, which will result in unknown privacy risks to the users. \textcolor{red}{A few research has shown that privacy issues are the underlying obstacles to the adoption of social and mobile technologies~\cite{}}. Privacy concerns have been identified as an important barrier to the growth of IoT.
+When users are considering adopting new IoT devices, they want to take the benefit of using those smart connected electronic devices by sharing and disclosing certain personal information to get a more personalized experience. However, such disclosed information could be accessed by other smart devices owned by themselves, other people, organizations, government, or some third-parties with good or bad purpose, which will result in unknown privacy risks to the users. Research has shown that privacy concerns
+%s is an important underlying obstacles to the adoption of social and mobile technologies. Privacy concerns 
+have been identified as an important barrier to the growth of IoT~\cite{pricewaterhousecoopers_smart_nodate}.
 
-Most Internet users take a pragmatic stance when they have to make choices on what information that they want to disclose. They implicitly use a method called \textit{privacy calculus} to process their information disclosure decisions. They compare the perceived risks and anticipated benefit, and make decisions based on this risk-benefit analysis.
-
-However, as the diversity of IoT devices increases, it becomes more and more difficult to keep up with the many different ways in which data about ourselves is collected and disseminated. Although generally users care about their privacy, few of them in practice find time to read the privacy policies or the privacy-settings carefully that are provided to them. There are several reasons for this problem: i) Users will pay more attention to the benefit than potential risks from using IoT devices or services. ii) The privacy policies are too long, or the privacy setting of such devices are too complicated, making users irritated to finish reading/setting them. iii) As the number IoT devices rapidly increases, the numbers and options of privacy setting for all the IoT devices will also increase exponentially. This privacy-setting choice overload makes it difficult for IoT users to correctly and precisely make their decision to express their true demands. 
+Most Internet users take a pragmatic stance when they have to make choices on what information that they want to disclose. They implicitly use a method called \textit{privacy calculus} to process their information disclosure decisions. They compare the perceived risks and anticipated benefit, and make decisions based on this risk-benefit analysis. However, as the diversity of IoT devices increases, it becomes more and more difficult to keep up with the many different ways in which data about ourselves is collected and disseminated. Although generally users care about their privacy, few of them in practice find time to read the privacy policies or the privacy-settings carefully that are provided to them. There are several reasons for this problem: i) Users will pay more attention to the benefit than potential risks from using IoT devices or services. ii) The privacy policies are too long, or the privacy setting of such devices are too complicated, making users irritated to finish reading/setting them. iii) As the number IoT devices rapidly increases, the numbers and options of privacy setting for all the IoT devices will also increase exponentially. This privacy-setting choice overload makes it difficult for IoT users to correctly and precisely make their decision to express their true demands. 
 
 In addition, the user interface for setting privacy preferences of present IoT devices is imperfect even for a smartphone, not to mention the complexity of manually setting privacy preferences for numerous different other IoT devices. Hence, there is an urgent demand to solve the following research question: 
 
@@ -21,9 +21,9 @@ In Chapter~\ref{chapter:acceptability}, we first present a preliminary user stud
 	
 In Chapter~\ref{chapter:generalIoT}, we try to answer the first sub question by researching the decision-making characteristics of general IoT users. We demonstrate our existing work on recommending privacy settings for general IoT. For this study, we leveraged data collected by Lee and Kobsa~\cite{lee2016understanding}, which asked 200 participants about their intention to allow or reject the IoT features presented in 14 randomized generated general public IoT usage scenarios. The scenarios have 5 manipulable parameters: `Who', `What', `Where', `Reason', and `Persistence'. We first apply statistical analysis on the dataset to determine the effect of each scenario parameter on users' decisions to allow the general IoT scenarios. Based on this statistical analysis, we design an ``layered'' intelligent user interface to reduce the complexity of manually setting privacy preferences for IoT. To further simplify the task of manually setting privacy preferences, we next use machine learning techniques to predict users' decisions based on the scenario parameters. By using Weka Java library, I develop 5 different machine learning algorithms to cluster the participants and create a number of ``smart profiles''  accordingly. Each ``smart profile'' is a group of pre-set privacy setting preferences with detailed explanations. Users can simply choose the one they think the most fit and apply by a single click.
 	
-In Chapter~\ref{chapter:householdIoT}, we still try to answer the first sub question, but in household domain. 
+In Chapter~\ref{chapter:householdIoT}, we still try to answer the first sub question, but in household domain. \textcolor{red}{add more...}
 	
-In Chapter~\ref{chapter:fitnessIoT}, we move our discussion on the first sub question to the fitness IoT domain.
+In Chapter~\ref{chapter:fitnessIoT}, we move our discussion on the first sub question to the fitness IoT domain.\textcolor{red}{add more...}
 	
 Our biggest limitation for the methods that we use in previous chapters is that we didn't test any of the presented interfaces, so we don't know what level of complexity (both in terms of the user interface and the in terms of the profiles). We next address this limitation in Chapter~\ref{chapter:evaluation}. In this chapter, I discuss my proposed study to evaluate the new interface of recommending privacy-settings for household IoT
 
