--- a/Proposal/2acceptability.tex
+++ b/Proposal/2acceptability.tex
@@ -1,6 +1,6 @@
 % !TeX root = proposal.tex
 
-\chapter{The Acceptability of IoT (original work)}\label{chapter:acceptability}
+\chapter{Exploring the Acceptability of IoT (original work)}\label{chapter:acceptability}
 
 In this chapter, we present a preliminary survey study based on interviews with potential IoT users to gain deeper insight on the acceptability of IoT systems. By conducting this pilot study, we try to gain deeper understanding on the general IoT acceptability from users' perspective, i.e. \textbf{What are the factors that affect users' decision when they consider adopting a new IoT device}. The reason we conduct this preliminary user study is that IoT device users in real usage context would more likely pay higher attention to those factors that have already affected their decisions when they are considering adopting a IoT device, i.e. The factors that affect users' adopting phase would more likely to have effect on their real use phase too. Therefore, knowing what aspects of IoT are important to user when they are considering adopting IoT would be helpful and supportive to our following investigation on how general IoT users make decisions when they share their personal data in different IoT contexts and further affect how we design the user interface for setting privacy preferences and recommend privacy settings for different IoT contexts. I first discuss the experimental setup of our preliminary user study. Secondly, I demonstrate the analysis on the results of the study, and finally summarize our findings.
 
@@ -66,17 +66,14 @@ below is an excerpt from an interview which highlights the importance of what in
 
 Within the various types of personal information that can be collected or shared, some information can be used to help identify users' identity or even hack or rob the users, such as photos and videos. We define this type of personal information as \textbf{\textit{Identifiable Information}}.
 
-Typically, users are mostly not comfortable with sharing their \textit{identifiable information}  in an IoT system. They worried about sharing this type of data because it may threaten their security.
-
-For the information that are not sensitive
-Some participants expressed that some of their private data can be shared unless it is sensitive. One example is that one participant mentioned, "At this point I am not much concerned about my location being shared. I mean if somebody wants to find me they can find me anyhow without my location being shared. I don't mind location, I don't like personal messages or personal pictures, personal communication being shared. That bothers me, example my email has some social security or something.". Another participant mentioned that ``May be sharing birthday or address, sharing those kind of data I'm not comfortable with". Another quote which proves the above point is "Maybe you can just share your common information, such as heartbeat data, sleeping data. But more critical, privacy data I don't want to share."
+Typically, users are mostly not comfortable with sharing their \textit{identifiable information} in an IoT system. They worried about sharing this type of data as it could threaten their security. However, some participants seem to have different sharing intention on certain types of \textit{identifiable information}. Some participant expressed that he/she doesn't mind his/her location information being shared, \textit{``At this point I am not much concerned about my location being shared. I mean if somebody wants to find me they can find me anyhow without my location being shared. I don't mind location, I don't like personal messages or personal pictures, personal communication being shared. That bothers me, for example my email has some social security or something"}. Another participant mentioned that, \textit{``May be sharing birthday or address, sharing those kind of data I'm not comfortable with"}. Another quote which proves the above point is \textit{``Maybe you can just share your common information, such as heartbeat data, sleeping data. But more critical, privacy data I don't want to share"}.
 
 Another participant also mentioned, \textit {``Apart from photos, what other kind of information you like or don't like to be shared? Like saying something dirty to my girlfriend or something. That's okay like guy's being a guy. But if I am having really you know personal conversation about death of a loved one or something and we are trying to work out logistics or something. That's a problem for me. But for a regular conversation I am ok".} So the voice, seen as private data by many users, can be recorded or shared for some users.
 
 It is intriguing that users were well aware of what type of information is collected/shared. This suggests that the designer of future IoT privacy-setting interfaces should provide the user separated options of allowing or denying data collecting/sharing for various types of information.
 
 \subsubsection{Trust in IoT: \textit{Who is collecting, storing, and sharing my data?}}
-Another aspect related to the IoT privacy we observed in our interviews is \textbf{Trust}. Users care about who is collecting their data, with whom their data is shared, and where their data is stored. The object of trust from users can be varied in different IoT contexts. For example, in general IoT environment, the objects can be an individual (e.g. your colleagues), an organization (e.g. your employer), or the government. While in a household IoT environment, users' data may be first shared within all the connected IoT devices deployed in his/her home for various functionalities. Moreover, the collect data from users can be further uploaded to the manufacturers and can be stored on a remote server (cloud) or even shared with Third-Party for other purposes, such as advertisements and better recommendations. While in fitness IoT context, users' data are mostly sent to the manufacturers directly for further analysis purpose.
+Another aspect related to the IoT privacy we observed in our interviews is \textbf{Trust}. From our interviews, we observed that users care about who is collecting their data, with whom their data is shared, and where their data is stored. The object of trust from users can be varied in different IoT contexts. For example, in general IoT environment, the objects can be an individual (e.g. your colleagues), an organization (e.g. your employer), or the government. While in a household IoT environment, users' data may be first shared within all the connected IoT devices deployed in his/her home for various functionalities. Moreover, the collect data from users can be further uploaded to the manufacturers and can be stored on a remote server (cloud) or even shared with Third-Party for other purposes, such as advertisements and better recommendations. While in fitness IoT context, users' data are mostly sent to the manufacturers directly for further analysis purpose.
 
 From our interviews, we observed that the trust to the Second-Party or even the Third-Party also varies from user to user. One of the participants pointed out that, \textit{P: "For example, Apple in the news recently for refuting the FBI. FBI wanted in, Apple said we can't access these phone that actually turned me on to apple I previously used android. And the fact that they say they made their devices so secured that they can't even access them that really interests me. So yeah I am very concerned about it but I think now that I evolved into the Apple eco-system. I pretty much give apple everything because I trust them."}
 
@@ -135,6 +132,6 @@ In a deeper level of usability, if the users find that the IoT systems/devices w
 
 The ability to control, which can also be seen as the capability to dominate over a technical entity and the extent to which this control can be exercised is one of the key aspects in determining the overall usability of the system. If the users think that they have a high level of control, they are likely to believe that the system has better usability.
 
-In terms of privacy, the users primarily make judgments based on the trust they have on the brand/manufacturer and its public image. For example, one of our participants mentioned that he would trust apple when it comes to sharing of information, this participant had immense trust in Apple, based on some great reports recently published in newspapers. Hence, if they trust a brand with their data, they will have a better resolution of their privacy concerns, which would eventually lead to them accepting the technology. It is evident that the brand image will certainly play a key role in new users accepting the IoT technology.
+In terms of privacy, the users primarily make judgments based on the trust they have on the brand/manufacturer and its public image. For example, one of our participants mentioned that he would trust Apple when it comes to sharing of information, this participant had immense trust in Apple, based on some great reports recently published in newspapers. Hence, if they trust a brand with their data, they will have a better resolution of their privacy concerns, which would eventually lead to them accepting the technology. It is evident that the brand image will certainly play a key role in new users accepting the IoT technology.
 
 Based on the insights gained from this study, we encourage the designers of IoT privacy-setting interfaces to face the difficult challenge of maximizing the usability and the privacy control of the user interface while minimizing the privacy threats to the users. However, since people differ extensively in their privacy settings~\cite{olson2005study}. At the same time, the vast number of different IoT devices makes choosing adequate privacy settings a very challenging task that is likely to result in information and choice overload~\cite{williams2016perfect}. Under these circumstances, a data-driven design approach seems promising since we could cluster similar users and summarize their privacy preference to generate a set of ``smart profiles" for new users to choose from in our IoT privacy-setting interface. We discuss this data-driven approach in the following chapters.
