--- a/Proposal/bibliography.bib
+++ b/Proposal/bibliography.bib
@@ -1,3 +1,27 @@
+@misc{pricewaterhousecoopers_smart_nodate,
+	author = {PwC},
+	title = {Smart home, seamless life: Unlocking a culture of convenience},
+	url = {https://www.pwc.com/us/en/industry/entertainment-media/publications/consumer-intelligence-series/assets/pwc-consumer-intelligence-series-iot-connected-home.pdf},
+	year = {2017},
+	note = "[Online; accessed 1-Jan-2019]"
+}
+
+@article{eddy2015gartner,
+	title={Gartner: 21 Billion IoT devices to invade by 2020},
+	author={Eddy, Nathan},
+	journal={InformationWeek, Nov},
+	volume={10},
+	year={2015}
+}
+
+@inproceedings{yu2015handling,
+	title={Handling a trillion (unfixable) flaws on a billion devices: Rethinking network security for the internet-of-things},
+	author={Yu, Tianlong and Sekar, Vyas and Seshan, Srinivasan and Agarwal, Yuvraj and Xu, Chenren},
+	booktitle={Proceedings of the 14th ACM Workshop on Hot Topics in Networks},
+	pages={5},
+	year={2015},
+	organization={ACM}
+}
 
 @inproceedings{worthy_trust_2016,
 	address = {New York, NY, USA},
