--- a/Proposal/6evaluation.tex
+++ b/Proposal/6evaluation.tex
@@ -62,7 +62,7 @@ Next, the participants will be give a survey containing questions about three di
 \begin{figure}
 	\centering
 	\includegraphics[width=0.9\textwidth]{figures/uimodel.pdf}
-	\caption{Expected Model for Proposed User Study}
+	\caption{Expected Structural Model for Proposed User Study}
 	\label{fig:uimodel}
 \end{figure}
 
